--- a/Regular_Expressions.ipynb
+++ b/Regular_Expressions.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "0060e78e-63b6-4d0e-be8d-3655cfe66002",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "ce4c7b3b-b370-4a3f-9e83-46065e9ab103",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "00ecf3ea-71ce-4c67-ba4c-a0e349102558",
    "metadata": {},
    "outputs": [
@@ -182,12 +182,12 @@
    "id": "de8a9331-7b9e-4e7f-a255-dec2150ae5c5",
    "metadata": {},
    "source": [
-    "3) Write a Python program that matches a string that has an a followed by two to three 'b'."
+    "3) Write a Python program that matches a string that has an 'a' followed by two to three 'b'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "d625aa64-b485-41f2-bc3a-db3411574a9c",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
    "metadata": {},
    "source": [
     "**'a\\*'** Matches zero or more consecutive `a` characters. \\\n",
-    "```'a*'``` => ``` '' or 'a' or 'aa' or 'aaa' or 'aaaa'```"
+    "```'a*'``` => ``` '' or 'a' or 'aa' or 'aaa' or 'aaaa' ...```"
    ]
   },
   {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "444278b8-968b-4559-b2c2-c609a397ce8b",
    "metadata": {},
    "outputs": [
@@ -288,10 +288,121 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c885521",
+   "metadata": {},
+   "source": [
+    "5. Write a Python program that matches an ```'efg'``` only between an ```'abcd'``` and an ```'hij'```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd03fff8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e5fc68",
+   "metadata": {},
+   "source": [
+    "**'(?=...)'** is called a positive lookahead and is used to check if a subpattern exist before a match whitout consumming charactere.\\\n",
+    "```'(?=color: )\\w*'``` => ```'color: blue'``` or ```'color: red'``` but the fist return ```'blue'``` and the second ```'red'```\\\n",
+    "A positive lookbehind and their negative equivalent also exist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "369cb5ef",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "51298a6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match:\n",
+      "Found a match!\n",
+      "Not Match:\n",
+      "Found a match!\n",
+      "Found a match!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def text_match5(text):\n",
+    "        patterns = ''\n",
+    "        if re.search(patterns,  text):\n",
+    "                return 'Found a match!'\n",
+    "        else:\n",
+    "                return('Not matched!')\n",
+    "\n",
+    "print(\"Match:\")\n",
+    "print(text_match5(\"abcdefghij\"))\n",
+    "print(\"Not Match:\")\n",
+    "print(text_match5(\"abdefghij\"))\n",
+    "print(text_match5(\"abcdefgh\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5071476b",
+   "metadata": {},
+   "source": [
+    "6.Write a Python program that only matches 'Pac Man' and 'PacMan'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "375d54ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match:\n",
+      "Found a match!\n",
+      "Found a match!\n",
+      "Not Match:\n",
+      "Found a match!\n",
+      "Found a match!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def text_match6(text):\n",
+    "        patterns = ''\n",
+    "        if re.search(patterns,  text):\n",
+    "                return 'Found a match!'\n",
+    "        else:\n",
+    "                return('Not matched!')\n",
+    "\n",
+    "print(\"Match:\")\n",
+    "print(text_match6(\"Pac Man\"))\n",
+    "print(text_match6(\"PacMan\"))\n",
+    "print(\"Not Match:\")\n",
+    "print(text_match6(\"Pac  Man\"))\n",
+    "print(text_match6(\"\\_(._.)_/\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ea894d0-da8f-4321-aa15-43042b14b7e2",
    "metadata": {},
    "source": [
-    "5. Validate an IPv4 address. The addresses are four numbered separated by three dots, and can only have a maximum value of 255 in either octet. Start by trying to validate 172.16.254.1."
+    "7. Validate an IPv4 address. The addresses are four numbered separated by three dots, and can only have a maximum value of 255 in either octet. Start by trying to validate 172.16.254.1."
    ]
   },
   {
@@ -342,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "94937cb5-e72b-4b49-8b51-6900cb26cb42",
    "metadata": {},
    "outputs": [
