--- a/Regular_Expressions.ipynb
+++ b/Regular_Expressions.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "source": [
     "**'(?=...)'** is called a positive lookahead and is used to check if a subpattern exist before a match whitout consumming charactere.\\\n",
-    "```'(?=color: )\\w*'``` => ```'color: blue'``` or ```'color: red'``` but the fist return ```'blue'``` and the second ```'red'```\\\n",
+    "```'(?<=color: )\\w*'``` => ```'color: blue'``` or ```'color: red'``` but the fist return ```'blue'``` and the second ```'red'```\\\n",
     "A positive lookbehind and their negative equivalent also exist."
    ]
   },
